* SVN *

* Convert typo filters and permalinks to mephisto [Josh Susser]

* replace acts_as_attachment with attachment_fu plugin

* add tags to atom feed [evilchelu]

* flexible theme names in routes [evilchelu]

* update liquid plugin

* use default test.host domain where possible [courtenay]

* fix test ensuring that comments, not articles are sanitized for script tags [courtenay]

* fix articles form for latest rails 1.2 changes to date helpers [courtenay]

* fix test that breaks in multi-site mode [courtenay]

* Allow Modules to use #include_into to dynamically mixin to loaded classes (plugin stuff)

* Allow custom routes.

  Mephisto::Routing.connect_with map do
    map.foo ...
  end

* fix that only published articles are available as section pages.
* SVN *

Add sorting for liquid for statements.

  {% for page in section.pages limit: 3 sort_by: title %}

* 0.7.3 *

* Fix duplicate tag bug.

* add Mephisto.root javascript variable in case a mephisto site sets the relative_url_root

* don't sanitize custom anchor text for liquid filters [Jonathan Leighton]

* Fix nil authorization header bug.

* fix bug preventing plain html filter

* Fix akismet response issue

* 0.7.2 OFFICIAL *

* Allow safe fallback for bad Site#current_theme_path settings.

* Add another possible key to check for HTTP Basic Authentication

* Add shortcut to disable comments on an article from the comment moderation page.

* 0.7.1 PRE-RELEASE *

* add more robust tagging [Moritz Angermann]

* Fixed duplicate body bug in default Simpla theme when article has no excerpt

* Show excerpt by default on admin edit if the article has one

* big change to templates - store current site template in the Site db record.  Store templates in /themes/site-#{id}/*.  
  no more current/other/rollback bs.

* recognize swf files in themes

* When moderating comments, article title now links to edit action, magnifying glass links to article on site.
